# ShellGame

./: Cargo.toml  README.md
shellgame-core/: Cargo.toml
shellgame-core/src/: app.rs  main.rs
shellgame-pages/: Cargo.toml
shellgame-pages/src/: firstpage.rs  lib.rs  secondpage.rs  thirdpage.rs
shellgame-style/: Cargo.toml
shellgame-style/src/: style.rs
shellgame-widgets/: Cargo.toml
shellgame-widgets/src/: input_field.rs  lib.rs  navigation.rs
src/: app.rs  firstpage.rs  inputfield.rs  main.rs  min.rs  navigation.rs  page.rs  secondpage.rs
src/app/: app_logic.rs  navigation.rs
src/navigation/: mod.rs  navigation_logic.rs  navigation_ui.rs
