[package]
name        = "shellgame-pages"
version     = "0.1.1"
edition     = "2024"
license     = "MIT"
authors     = [ "PavloedPavloedov <paksenov465@gmail.com>" ]
description = "shellgame pages"
repository  = "https://github.com/PavloedPavloedov/ShellGame"

[dependencies]
shellgame-style = { path = "../shellgame-style", version = "0.1.1" }
shellgame-widgets = { path = "../shellgame-widgets", version = "0.1.1" }

ratatui = { workspace = true }
