[package]
name        = "shellgame-widgets"
version     = "0.1.1"
edition     = "2024"
license     = "MIT"
authors     = [ "PavloedPavloedov <paksenov465@gmail.com>" ]
description = "ShellGame user interface widgets"
repository  = "https://github.com/PavloedPavloedov/ShellGame"

[dependencies]
shellgame-style = { path = "../shellgame-style", version = "0.1.1" }

ratatui = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }